fixing overlapping divs in mobile site

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ p {
 
 #page2 {
     position: relative;
-    padding-top: 120px;
+    display: table;
     background-image: url("../images/bg5.jpg");
     background-size: cover;
     background-position: center;
@@ -102,14 +102,9 @@ p {
 }
 
 #content {
-    position: absolute;
     border-radius: 5px;
     max-width: 1000px;
     background-color: rgba(255, 255, 255, 0.9);
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
 }
 
 #content h1 {
